--- a/SiGotvime (Web)/Content/banners/Pakomak 300x250.html
+++ b/SiGotvime (Web)/Content/banners/Pakomak 300x250.html
@@ -11,10 +11,11 @@
     <style>html, body {width: 100%; height: 100%}</style>
   </head>
   <body style="margin: 0; overflow: hidden">
-    <div id="swiffycontainer">
+
+    <div id="swiffycontainer" style="width: 270px; height: 220px">
     </div>
-    <script>
-      
+
+    <script>      
       var stage = new swiffy.Stage(document.getElementById('swiffycontainer'),
           swiffyobject, {});
       
